<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.pesanan.PesananFragment">

    <data>
        <variable
            name="transaksi"
            type="com.example.p3l_apk_rastar.ui.user.model.Transaksi"/>
    </data>

    <FrameLayout
        android:id="@+id/fl_checkout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_judul_pesanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pesanan"
                    android:textAlignment="center"
                    android:textColor="?attr/colorAccent"
                    style="@style/TextAppearance.MaterialComponents.Headline4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_judul_pesanan"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_namaItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_menu"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_valueItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="105dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/qty" />

                    <TextView
                        android:id="@+id/tv_totalItem"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/subt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_checkout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_details"
                    tools:listitem="@layout/item_pesanan" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/rv_checkout"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_subpricetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="Subtotal"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_subcurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupiah"
                        android:layout_marginRight="5dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_subprice"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_subprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,000,000,000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_sub"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_servicepricetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="Service 5%"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_servicecurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupiah"
                        android:layout_marginRight="5dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_serviceprice"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_serviceprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,000,000,000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_service"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_taxpricetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="Tax 10%"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_taxcurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupiah"
                        android:layout_marginRight="5dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_taxprice"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_taxprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,000,000,000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_tax"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_totalpricetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="@string/total"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_totalcurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rupiah"
                        android:layout_marginRight="5dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_totalprice"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/tv_totalprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1,000,000,000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/constraint_total"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confirmBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/checkout"
                        android:layout_margin="10dp"/>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>